[gd_scene load_steps=23 format=3 uid="uid://cc54t4tocndg7"]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_eoeps"]
[ext_resource type="Texture2D" uid="uid://dpahml8n3wh7r" path="res://sprites/player.png" id="2_2ke0w"]
[ext_resource type="Texture2D" uid="uid://dt8gpxw27jtkq" path="res://sprites/light.png" id="3_koder"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k3hlb"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lx0to"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm22y"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n65ia"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hgqa"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxh8"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehm6u"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4snub"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i56bm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx0to")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm22y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n65ia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hgqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekxh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehm6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4snub")
}],
"loop": false,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7xl7m"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1eta"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tovno"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov83o"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_utoos"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn6as"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab44i"]
atlas = ExtResource("2_2ke0w")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_goejg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xl7m")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1eta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tovno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov83o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utoos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wn6as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab44i")
}],
"loop": false,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ppy2j"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nlvj2"]
size = Vector2(18, 32)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 2
collision_layer = 4
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_eoeps")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_k3hlb")

[node name="TopPart" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_i56bm")
animation = &"walk"
autoplay = "idle"

[node name="BottomPart" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_goejg")
animation = &"idle"
autoplay = "idle"

[node name="NavUpdateTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 16.0
target_desired_distance = 24.0

[node name="EnemyShadow" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0.117647)
show_behind_parent = true
z_index = -1
material = SubResource("CanvasItemMaterial_ppy2j")
position = Vector2(4.76837e-07, 16)
scale = Vector2(0.15, 0.15)
skew = -1.0472
texture = ExtResource("3_koder")

[node name="RotTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.25
autostart = true

[node name="HitboxArea" type="Area2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_nlvj2")

[connection signal="timeout" from="NavUpdateTimer" to="." method="_on_nav_update_timer_timeout"]
[connection signal="timeout" from="RotTimer" to="." method="_on_rot_timer_timeout"]
